# card-flow-markdown-viewer

./: ARCHITECTURE.md  CLAUDE.md  DEBUG_NOTES.md  README.md  README_ZH.md  package-lock.json  package.json
docs/plans/: 2026-02-19-frontend-redesign.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  frontmatter.rs  lib.rs  scanner.rs
src/components/: CardDetail.tsx  CardGrid.tsx  CardItem.tsx  EmptyState.tsx  SettingsPanel.tsx  TagFilter.tsx  TimeDisplay.tsx  Toolbar.tsx
src/lib/: i18n.ts  tauri.ts  timezone.ts
src/stores/: cardStore.ts
src/types/: settings.ts
