[package]
name = "card-flow"
version = "0.1.0"
edition = "2021"

[lib]
name = "card_flow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ignore = "0.4"
notify = "7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
regex = "1"
